@@ -9,6 +9,7 @@ import uk.ac.ceh.gateway.catalogue.gemini.*;
 import uk.ac.ceh.gateway.catalogue.geometry.BoundingBox;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
@@ -29,14 +30,10 @@ public class GeminiExtractorTest {
     public void getKeywords() {
         //Given
         val document = new GeminiDocument();
-        document.setDescriptiveKeywords(Arrays.asList(
-            DescriptiveKeywords.builder()
-                .keywords(Arrays.asList(
-                    Keyword.builder().URI("http://example.com/0").value("example 1").build(),
-                    Keyword.builder().URI("http://example.com/1").value("example 2").build()
-                ))
-                .type("place")
-                .build()
+
+        document.setKeywordsOther(List.of(
+            Keyword.builder().value("example 1").URI("http://example.com/0").build(),
+            Keyword.builder().value("example 2").URI("ttp://example.com/1").build()
         ));
 
         //When
@@ -57,6 +54,7 @@ public class GeminiExtractorTest {
         //Then
         assertThat(keywords.size(), equalTo(0));
     }
+
 
     @Test
     @SneakyThrows
